Avoid double border on `abbr` and `dfn` in Firefox >40

--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -108,12 +108,13 @@ dfn {
 }
 
 /**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ * Address styling not present in Safari and Chrome.
  */
 
 abbr[title],
 dfn[title] {
-    border-bottom: dotted 1px;
+    -webkit-text-decoration: dotted underline;
+    text-decoration: dotted underline;
     cursor: help;
 }
 
